<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="horizontal">

   <LinearLayout
       android:paddingTop="20dp"
       android:paddingBottom="20dp"
       android:paddingLeft="10dp"
       android:paddingRight="10dp"
       android:layout_margin="5dp"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/background_shape">
       <LinearLayout
           android:orientation="vertical"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1">
           <TextView
               android:text="@string/test_name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/titleBlackTextBold"
               android:id="@+id/name"/>
           <TextView
               android:text="@string/test_email"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/normalBlackText"
               android:id="@+id/email"/>
           <TextView
               android:text="@string/test_phone"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/normalBlackText"
               android:id="@+id/phone"/>
       </LinearLayout>

       <LinearLayout
           android:orientation="vertical"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="0.5">
           <TextView
               android:text="@string/title_address"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/titleBlackTextBold"/>
           <TextView
               android:text="@string/test_address"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/normalBlackText"
               android:maxLines="4"
               android:autoSizeTextType="uniform"
               android:autoSizeMinTextSize="7dp"
               android:autoSizeMaxTextSize="14dp"
               android:id="@+id/address"/>
       </LinearLayout>
   </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>