<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/title_voter_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/normalBlackText"/>
                <TextView
                    android:id="@+id/name"
                    android:text="@string/test_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/normalBlackText"/>
            </LinearLayout>

            <LinearLayout
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/decrement_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_baseline_remove_circle_outline_24"/>
                <ImageView
                    android:id="@+id/increment_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_add_circle_outline_24"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/title_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/normalBlackText"/>
                <TextView
                    android:gravity="right"
                    android:id="@+id/vote"
                    android:text="@string/test_free_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/normalBlackText"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>